PR/50951: David Binderman: Fix misplaced parens